Fixed img-team being too wide on mobile

--- a/app/components/home/home.css
+++ b/app/components/home/home.css
@@ -163,6 +163,8 @@
 
 .img-team {
   border-radius: var(--button-radius);
+  max-width: 100%;
+  height: auto;
 }
 
 .apply-now a {
@@ -183,6 +185,7 @@
 }
 
 @media only screen and (max-width: 480px) {
+
   /* CSS styles for phones */
   .main-ca {
     position: unset;
@@ -190,24 +193,30 @@
     width: 50%;
     padding-left: 40px;
   }
+
   .formula-student-info {
     width: 100%;
   }
+
   .teams-res {
     width: 50%;
     flex-direction: column;
     gap: 10px;
   }
+
   .looking h1 {
     text-align: center;
   }
+
   .apply-now {
     flex-direction: column;
   }
+
   .apply-now h1 {
     text-align: center;
     margin-bottom: 15px;
   }
+
   .apply-info {
     display: flex;
     flex-direction: column;
@@ -215,6 +224,7 @@
     width: 90%;
     padding-bottom: 30px;
   }
+
   .apply-info p {
     margin-top: 30px;
   }
